# img2ascii

./: .pre-commit-config.yaml  Makefile  Readme.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
src/img2ascii/: __init__.py  cli.py  converter.py
src/media2ascii/: __init__.py  cli.py  converter.py  utils.py
tests/: test_img2ascii.py
